--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          </div>
 
          <div id="toptop"> 
-           <h3>Now Live | Biggest Sale Of The Year ></h3>
+           <h3>Now Live | Biggest Sale Of This Year !! Go ahead--> ></h3>
          </div>
 
 
