Done with day-4 task

--- a/shoes_bags.html
+++ b/shoes_bags.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Womens Page</title>
-    <link rel="stylesheet" type="text/css" href="./Styles/womens.css">
+    <title>Shoes and Bags Page</title>
+    <link rel="stylesheet" type="text/css" href="./Styles/shoes_bags.css">
    
 </head>
 <body>
@@ -14,9 +14,9 @@
             <img  id="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe-g8iZ-mlfES3gFm2FTfSp2n1ZYcLWMvDpLbgo3Bh&s"/>
             <div id="pages">
              <a href="./index.html">Home</a><br/>
-             <a style="color: orange"href="./womens.html">Womens</a><br/>
+             <a href="./womens.html">Womens</a><br/>
              <a href="./mens.html">Mens</a><br/>
-             <a href="./shoes_bags.html">Shoes&Bags</a><br/>
+             <a  style="color: orange" href="./shoes_bags.html">Shoes&Bags</a><br/>
              
              <a href="./login.html">Login</a><br/>
              <a href="./signup.html">SignUp </a><br/>
@@ -96,4 +96,4 @@
     </div>
 </body>
 </html>
-<script src="./Scripts/womens.js"></script>
+<script src="./Scripts/shoes_bags.js"></script>
