--- a/basket.html
+++ b/basket.html
@@ -7,9 +7,16 @@
     <title>Cart Page</title>
 </head>
 <body>
-    <div class="cart-container1">
+    <div class="container">
+<h1 style="text-align:center;color:red;">Hurry Upp!!! And buy you Items</h1>
 
+<h1 id="cart-total"style="text-align:center;color:rgb(55, 23, 129);">Total Price of you Items:<span>0</span></h1>
+        <div class="cart-container">
+           
+
+        </div>
     </div>
+    
 </body>
 </html>
 <script src="./Scripts/basket.js"></script>
