--- a/shoes_bags.html
+++ b/shoes_bags.html
@@ -11,9 +11,9 @@
 <body>
     <div class="cont">
         <div class="nav">
-            <img  id="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe-g8iZ-mlfES3gFm2FTfSp2n1ZYcLWMvDpLbgo3Bh&s"/>
+            <a  href="./index.html"><img  id="logo"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe-g8iZ-mlfES3gFm2FTfSp2n1ZYcLWMvDpLbgo3Bh&s"/></a>
             <div id="pages">
-             <a href="./index.html">Home</a><br/>
+             
              <a href="./womens.html">Womens</a><br/>
              <a href="./mens.html">Mens</a><br/>
              <a  style="color: orange" href="./shoes_bags.html">Shoes&Bags</a><br/>
