--- a/signup.html
+++ b/signup.html
@@ -49,6 +49,7 @@ form.addEventListener("submit",function(event){
     user_data.push(form_data);
     window.location.assign("./index.html")
     localStorage.setItem("account-data",JSON.stringify(user_data));
+    console.log(account-data);
   }
 })
 </script>
